--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
-    "sass": "^1.26.9"
+    "sass": "^1.26.9",
+    "swr": "^0.2.3"
   }
 }
